REMP upgrade to PHP 8.0
remp/remp#1160

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "~7.1",
+    "php": "^8.0",
     "guzzlehttp/guzzle": "^7.0",
     "gburtini/distributions": "^0.0.2"
   },
